modified:   package-lock.json 	modified:   package.json 	modified:   src/App.css 	deleted:    src/App.test.tsx 	modified:   src/components/header.tsx 	modified:   src/components/headlines.tsx 	new file:   src/components/nav.tsx 	new file:   src/images/L.png 	new file:   src/images/logo-svg.css 	new file:   src/images/logo-svg.tsx 	new file:   src/images/logo.png 	new file:   src/images/logo.svg 	new file:   src/images/menu-1.svg 	new file:   src/images/menu-unfold.svg 	modified:   src/index.css 	modified:   src/styles/header.css 	new file:   src/styles/headlines.css

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.stroke-text{
+  color:transparent;
+  font-family:'FoundersGrotesk';
+  -webkit-text-stroke-width:1px;
+  -webkit-text-stroke-color:white;
+}
