--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
 .App {
-  text-align: center;
+  position:relative;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.stroke-text{
+  color:transparent;
+  font-family:'Josefin Slab';
+  -webkit-text-stroke-width:1.5px;
+  -webkit-text-stroke-color:black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.underline-text{
+  box-shadow: inset 0 -2px 0 rgba(50,85,127,0.5), 0 2px 0 rgba(50,85,127,0.5);
+  transition: box-shadow .3s;
+  color: transparent;
+  overflow: hidden;
+}
+.underline-text-mobile {
+  box-shadow: inset 0 -20px 0 rgba(238, 250, 16, 0.468), 0 2px 0 rgba(50,85,127,0.5);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.underline-text:hover {
+  box-shadow: inset 0 -30px 0 rgba(238, 250, 16, 0.468), 0 2px 0 rgba(50,85,127,0.5);
 }
