modified:   src/App.css 	modified:   src/App.tsx 	modified:   src/components/header.tsx 	modified:   src/components/headlines.tsx 	modified:   src/components/review.tsx 	new file:   src/images/rating-full-star.svg 	new file:   src/images/rating-half-star.svg 	modified:   src/styles/header.css 	modified:   src/styles/headlines.css 	new file:   src/styles/review.css

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .stroke-text{
   color:transparent;
-  font-family:'Josefin Slab';
+  font-family:'Courier New', Courier, monospace;
   -webkit-text-stroke-width:1.5px;
   -webkit-text-stroke-color:black;
 }
