--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -4,7 +4,7 @@
     /* flex-direction: row; */
     background: #0890F1;
     color: #FFFFFF;
-    padding: 36px 44px;
+    padding: 40px 50px;
     transition: 250ms;
     position: fixed;
     top: 0;
@@ -13,10 +13,10 @@
     z-index: 100;
 }
 
-.us-nav .scrolled {
+.scrolled {
     background: #ffffff;
-    padding-top: 16px;
-    padding-bottom: 16px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     border-bottom: 1px solid #D8DCDF;
 }
 
@@ -30,7 +30,7 @@
     padding:0.1rem 0.2rem;
     position:absolute;
     top:-1rem;
-    right: 9rem;
+    left: -1rem;
     font-size:1rem;
     color:white;
     background-color: blue;
@@ -40,18 +40,21 @@
 .logo-shadow {
     position: absolute;
     top: -0.28rem;
-    right: 9rem;
+    left: -1rem;
     width: 10.56rem;
     height: 1.5rem;
     background-color: yellow;
 }
 
 .menu{
+    display:flex;
     position: absolute;
-    left:12rem;
-    top:0rem;
-    width:30px;
+    right:0rem;
+    top:-1rem;
+    width:50px;
 }
+
+
 .nav{
     position: absolute;
 }
