--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -73,7 +73,7 @@
     top: -4rem;
     font-size: 2rem;
     font-weight: bolder;
-    background-color: #0890F1;
+    background-color: #FFD06D;
     gap: 3rem;
     padding: 0rem;
 }
