--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,16 @@
 .underline-text:hover {
   box-shadow: inset 0 -30px 0 rgba(238, 250, 16, 0.468), 0 2px 0 rgba(50,85,127,0.5);
 }
+
+.btn{
+  width:fit-content;
+  padding:0.7rem;
+  font-weight: 900;
+  font-size:1rem;
+  font-family: 'FoundersGrotesk';
+  background-color:rgb(219, 215, 215);
+  outline:none;
+  border:none;
+  border-radius:5%;
+  color:darkblue;
+}
