modified:   src/App.css 	modified:   src/components/why-us.tsx 	modified:   src/hooks/useScript.jsx 	modified:   src/styles/why-us.css

--- a/src/styles/why-us.css
+++ b/src/styles/why-us.css
@@ -4,3 +4,11 @@
     top: 4rem;
     padding-top: 2rem;
 }
+.googleReview{
+    position:relative;
+}
+.more-reviews-btn{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
