--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,17 @@
   border-radius:5%;
   color:darkblue;
 }
+
+.btn2{
+  width:fit-content;
+  padding:0.7rem;
+  font-weight: 900;
+  font-size:1rem;
+  font-family: 'FoundersGrotesk';
+  background-color:darkblue;
+  outline:none;
+  border:none;
+  border-radius:5%;
+  color:rgb(219, 215, 215);
+  box-shadow: 0px 0px 6px 0px #5100ff;
+}
