modified:   src/App.css 	modified:   src/components/faq.tsx 	modified:   src/components/headlines.tsx 	modified:   src/components/why-us.tsx 	modified:   src/hooks/useScript.jsx 	new file:   src/styles/faq.css 	modified:   src/styles/headlines.css 	modified:   src/styles/why-us.css

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,9 @@
 
 .stroke-text{
   color:transparent;
-  font-family:'Courier New', Courier, monospace;
   -webkit-text-stroke-width:1.5px;
-  -webkit-text-stroke-color:black;
+  -webkit-text-stroke-color:rgb(45, 43, 33);
+  font-size: larger;
 }
 
 .underline-text{
@@ -16,7 +16,7 @@
   overflow: hidden;
 }
 .underline-text-mobile {
-  box-shadow: inset 0 -20px 0 rgba(238, 250, 16, 0.468), 0 2px 0 rgba(50,85,127,0.5);
+  box-shadow: inset 0 -10px 0 rgba(238, 250, 16, 0.468), 0 2px 0 rgba(50,85,127,0.5);
 }
 
 .underline-text:hover {
