modified:   src/components/faq.jsx 	modified:   src/styles/faq.css

--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -39,8 +39,10 @@
     padding-bottom: 1rem;
 
 }
-
-.faq-answer{
+.faq-answer-hide{
+    display:none;
+}
+.faq-answer-show{
     background-color: whitesmoke;
     padding:0.5rem;
     border-radius:0.5rem;
