modified:   src/App.css 	modified:   src/App.tsx 	modified:   src/components/about.tsx 	modified:   src/components/faq.jsx 	modified:   src/components/footer.tsx 	modified:   src/components/headlines.tsx 	modified:   src/components/pricing.tsx 	modified:   src/components/review.tsx 	new file:   src/images/headlines-bg.png 	new file:   src/images/woman-bg-removed.png 	modified:   src/styles/about.css 	modified:   src/styles/faq.css 	new file:   src/styles/footer.css 	modified:   src/styles/headlines.css 	modified:   src/styles/pricing.css 	modified:   src/styles/review.css

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
   font-weight: 900;
   font-size:1rem;
   font-family: 'FoundersGrotesk';
-  background-color:darkblue;
+  background-color:#5555e1;
   outline:none;
   border:none;
   border-radius:5%;
