--- a/src/styles/pricing.css
+++ b/src/styles/pricing.css
@@ -82,3 +82,11 @@
     display:flex;
     justify-content: center;
 }
+
+
+@media only screen and (min-width: 700px) {
+    .card-container{
+        justify-content: space-evenly;
+    }
+    
+}
