--- a/src/styles/review.css
+++ b/src/styles/review.css
@@ -6,7 +6,7 @@
     position: relative;
     top: 4rem;
     gap: 2rem;
-    padding: 4rem 0rem;
+    padding: 4rem 1rem;
     color: #BAEBFF;
     text-transform: uppercase;
 }
@@ -36,4 +36,12 @@
 .moreReview{
     font-weight: 1000;
     font-size:1rem;
+    padding-top: 2rem;
+}
+
+@media (min-width: 768px){
+    .review{
+        display: flex;
+        justify-content: space-around;
+    }
 }
