--- a/src/styles/why-us.css
+++ b/src/styles/why-us.css
@@ -16,6 +16,7 @@
 .customer-review-head{
     font-size:2rem;
     font-weight: 700;
+    color: #3b3b80;
 }
 .customer-review-headline{
     font-weight: 500;
