--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -73,10 +73,11 @@
     top: -4rem;
     font-size: 2rem;
     font-weight: bolder;
-    background-color: #FFD06D;
+    background-color: #0890F1;
     gap: 3rem;
     padding: 0rem;
     cursor:pointer;
+    color:#3b3b80;
 }
 li{
     list-style: none;
